# ipvr-vaapi-driver

./: .gitignore  COPYING  LICENSE  Makefile.am  README.md  configure.ac
fw/: Makefile.am
fw/msvdx/: Android.mk  LICENSE  Makefile.am
fw/msvdx/.deps/: msvdx_bin.Po  thread1_bin.Po
src/: .gitignore  Android.mk  Makefile.am  config.h.in  ipvr_def.h  ipvr_drv_debug.c  ipvr_drv_debug.h  ipvr_drv_video.c  ipvr_drv_video.h  ipvr_execbuf.c  ipvr_execbuf.h  ipvr_output.c  ipvr_output.h  ipvr_surface.c  ipvr_surface.h  ipvr_surface_attrib.c  ipvr_surface_attrib.h  ipvr_surface_ext.h  object_heap.c  ved_execbuf.c  ved_execbuf.h  ved_vld.c  ved_vld.h  ved_vp8.c  ved_vp8.h
src/android/: ipvr_android.c  ipvr_android.h
src/hwdefs/: dxva_cmdseq_msg.h  dxva_fw_ctrl.h  dxva_msg.h
src/x11/: ipvr_x11.c
